Update docs for health endpoint
